--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,5 +1,5 @@
 list:
-  - title: "Started my Master's Degree in Computer Science at Johns Hopkins University"
+  - title: "Started my Master's in Computer Science at Johns Hopkins University"
     date: "Jan 2025"
   - title: "Completed my summer internship as an NLP Intern at VoicePing"
     date: "Aug 2023"
